<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.help.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/googleButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="googleClick"
                android:src="@drawable/google" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/google" />

            <ImageView
                android:id="@+id/photosButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="playStoreClick"
                android:src="@drawable/playstore" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/playstore" />

            <ImageView
                android:id="@+id/facebookButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="facebookClick"
                android:src="@drawable/facebook" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hangoutButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="hangoutClick"
                android:src="@drawable/hangout" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/hangout" />

            <ImageView
                android:id="@+id/mapsButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="mapsClick"
                android:src="@drawable/maps" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/maps" />

            <ImageView
                android:id="@+id/twitterButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:onClick="twitterClick"
                android:src="@drawable/twitter" />

            <TextView
                style="@style/LabelTextStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/twitter" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
